--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "give roles to users from their status",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"/
+    "start": "node main.js"
   },
   "author": "shifts",
   "license": "ISC",
